Name Changed css-> CSS

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -18,9 +18,9 @@
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
      <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 
-     <link href="/css/rating.css" rel="stylesheet">
+     <link rel="stylesheet" href="/CSS/rating.css" >
 
-     <link rel="stylesheet" href="/css/style.css">
+     <link rel="stylesheet" href="/CSS/style.css">
 
      <!-- MAPBOX -->
      <link href="https://api.mapbox.com/mapbox-gl-js/v3.10.0/mapbox-gl.css" rel="stylesheet">
